[package]
name = "discord-bot"
version = "0.1.2"
authors = ["TheDoctorsLife <hoffmeyer25@gmail.com>"]
homepage = "https://github.com/TheDoctorsLife/discord-bot"
repository = "git@github.com:TheDoctorsLife/discord-bot.git"
readme = "README.md"
license = "AGPL-3.0"

[dependencies]
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
serde = "*"
serde_json = "*"
